0.1-81
- add support for interocean 's4' current meters
- add unwrap.angle()
- read.adv.nortek(): detect the velocity range
- add processing.log.add(), an alternative to processing.log.append()
- plot.ctd(): add more plot types (and re-use which=9 for salinity, not density)
- as.ctd(): improve flexibilty
- predict.tidem(): add 'newdata' argument
- adv.2enu() added
- adp.xyz2enu(): make it correct for heading.bias
- make.filter(): can now produce tskernel type
- improve (but temporarily limit) fill.gap
- plot.adp(): add 'use.layout' argument
- window.oce() added
- make objects remember full filename, not just local filename (issue8)
- plot.tidem(): remove argument 'plot.type', using 'which' instead
- read.pt(): add arguments from, by, and to
- fix issue 57 [read.adp.rdi() read the heading incorrectly]
- add "reiniger-ross" method to ctd.decimate()
- oce.approx() added
- topo.world dataset added
- plot.ctd(): by default, make coastlines extend to box boundaries
- reformulate sun.angle in R
- fix google-code issue 56 [plot.topo() should accept land.z=NULL]
- fix google-code issue 55 [plot.topo() could go past poles]
- fix google-code issue 54 [plot.topo() was resetting par() on exit]
- fix google-code issue 53 [interp.barnes() gives poor error msg for mismatched x and y]
- fix google-code issue 52 [plot.section() draws incorrect bottom shape]
0.1-80
- add sun.angle [not tested yet; needs R reformulation]
- fix google-code issue 51 [summary.section() does not report water depth]
- fix google-code issue 50 [non-bug relating to sun elevation]
- fix google-code issue 49 [demo(TS) broken]
0.1-79
- fix google-code issue 48 [oce.plot.sticks() ignored page ratio]
- fix google-code issue 47 [cannot read new MEDS sealevel format]
0.1-78
- add data(RRprofile)
- to plot.TS(), add arguments lwd.rho and lty.rho
0.1-77
- refactor adp code wrt transformation matrices
- add matrix.smooth()
- improve labels for oce.axis.POSIXct()