@@ -29,6 +29,7 @@ export(
        ctd.update.header,
        ctime.to.seconds,
        decimate,
+       despike,
        fill.gap,
        formatci,
        full.filename,
@@ -91,6 +92,7 @@ export(
        processing.log.summary,
        pt.patm,
        pt.trim,
+       rangelimit,
        read.adp,
        read.adp.rdi,
        read.adp.nortek,
