@@ -185,7 +185,8 @@ decode.header.nortek <- function(buf, debug=getOption("oce.debug"), ...)
 read.adp.nortek <- function(file, from=1, to, by=1, tz=getOption("oce.tz"),
                             latitude=NA, longitude=NA,
                             type=c("aquadopp high resolution"),
-                            debug=getOption("oce.debug"), monitor=TRUE, log.action, ...)
+                            debug=getOption("oce.debug"), monitor=TRUE, despike=FALSE,
+                            log.action, ...)
 {
     bisect.adp.nortek <- function(t.find, add=0, debug=0) {
         oce.debug(debug, "bisect.adp.nortek(t.find=", format(t.find), ", add=", add, "\n")
