@@ -1,7 +1,7 @@
 read.adp.sontek <- function(file, from=1, to, by=1, tz=getOption("oce.tz"),
                             latitude=NA, longitude=NA,
                             type=c("adp"),
-                            debug=getOption("oce.debug"), monitor=TRUE, log.action, ...)
+                            debug=getOption("oce.debug"), monitor=TRUE, despike=FALSE, log.action, ...)
 {
     missing.to <- missing(to)
     ## In this function, comments in [] refer to logical page number of ADPManual_v710.pd; add 14 for file page number
